# smartHome

rpi/: devices.conf  initialize.py  main.py  rpi_client.py
rpi/connection/: __init__.py  connection.py  msgtype.py  my_socket.py  packet.py  rpi_server.py  rpiserver.py
rpi/devices/: __init__.py  device_codes.py  device_types.py  endpoint.py  initialize.py  light.py  shade.py  thermometer.py
rpi/logger/: logger.py
server/: AndroidCommunication.cpp  AndroidCommunication.h  AndroidMsg.cpp  AndroidMsg.h  Answer.cpp  Answer.h  CMakeLists.txt  Const.cpp  Const.h  Msg.cpp  Msg.h  Packet.cpp  Packet.h  RpiClient.cpp  RpiClient.h  RpiCommunication.cpp  RpiCommunication.h  RpiMsg.cpp  RpiMsg.h  Server.cpp  Server.h  exceptions.h  main.cpp
server/common/: Atomic.cpp  Atomic.h  InterThreadQueue.cpp  InterThreadQueue.h  Logger.cpp  Logger.h  network.cpp  network.h  semaphore.h
server/endpoints/: Endpoint.cpp  Endpoint.h  Light.cpp  Light.h  Shade.cpp  Shade.h  Thermometer.cpp  Thermometer.h
